# ewms-task-management-service

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  entrypoint.sh  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: image-publish.yml  publish.yml  wipac-cicd.yml
examples/: do_task.py
resources/: figure_error_eps.sh  find_bad_sites.sh  repull_resources.sh
resources/systemd/: ewms-tms-watcher.path   ewms-tms-watcher.service  ewms-tms.service  install.sh  set_tms_version.sh  update_tms_image_symlink.sh
resources/systemd/dev/: ewms-tms-dev-watcher.service  ewms-tms-dev.service
resources/systemd/tms-dev/: ewms-tms-dev-watcher.path  ewms-tms-dev-watcher.service  ewms-tms-dev.service
resources/systemd/tms-prod/: ewms-tms-prod-watcher.path  ewms-tms-prod-watcher.service  ewms-tms-prod.service  update_tms_image_symlink.sh
tests/job_event_logs/: condor_test_logfile
tests/unit/: test_file_manager.py  test_starter.py  test_stopper.py  test_watcher.py
tms/: __init__.py  __main__.py  condor_tools.py  config.py  types.py  utils.py
tms/file_manager/: file_manager.py
tms/scalar/: __init__.py  scalar.py  starter.py  stopper.py
tms/starter/: starter.py
tms/stopper/: stopper.py
tms/watcher/: utils.py  watcher.py  watcher_loop.py
