# pyproject.toml

[project]
dependencies = [
    "htcondor<24.0.0",
    "wipac-dev-tools",
    "wipac-rest-tools[telemetry]",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "nest-asyncio",
]
mypy = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "nest-asyncio",
]
